# cisco_cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/inputs/: ip_sample.txt  show_sample.txt
data/templates/: cmd_template.txt  config_template.ini  ip_template.txt
docs/: usage.md
show_cli/: __init__.py  main.py
src/: __init__.py  show_v2.py  show_v3.py
tests/: test_show_cli.py
